Fix Safari text highlight gaps bug

--- a/src/code/Highlight.module.css
+++ b/src/code/Highlight.module.css
@@ -27,6 +27,11 @@
 .pre :global(.tab)::before {
   content: "\002192";
 }
+/* hack to fix weird Safari text highlight gaps */
+.pre :global(:is(.space, .tab))::before {
+  left: -100px;
+  transform: translateX(100px);
+}
 
 .pre :global(.section-context) {
   display: none;
